--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,8 +29,8 @@
 
     <div class="hidden md:flex items-center gap-6">
       <a href="/pages/home.html" class="hover:text-[#6ab7e2]">Home</a>
-      <a href="/pages/petfood.html" class="text-[#6ab7e2]">Pet Food</a>
-      <a href="#" class="hover:text-[#6ab7e2]">Contact</a>
+      <a href="/pages/petfood.html" class="hover:text-[#6ab7e2]">Pet Food</a>
+      <a href="#" class="text-[#6ab7e2]">Contact</a>
       <a href="#" class="hover:text-[#6ab7e2]">About</a>
 
       <div class="nav-profile profile-wrapper">
@@ -43,7 +43,7 @@
         <div class="profile-menu hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex-col z-50 border border-gray-100">
           <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
           <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
-          <a href="cart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
       </div>
