--- a/pages/petMedicine.html
+++ b/pages/petMedicine.html
@@ -38,7 +38,7 @@
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
           <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
           <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
-          <a href="cart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
+          <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
       </div>
