--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,8 +41,8 @@
         </button>
 
         <div class="profile-menu hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex-col z-50 border border-gray-100">
-          <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
-          <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="/User/forgetPassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
           <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
@@ -148,7 +148,7 @@
     <div class="px-6 md:px-20 grid grid-cols-1 md:grid-cols-3 gap-6">
       <div>
         <h2 class="font-bold text-lg mb-2">PawPromise</h2>
-        <p>Email: pawpromisecontact@gmail.com</p>
+        <p>Email: info@pawpromise.com</p>
         <p>Contact: +8801761896783</p>
       </div>
       <div>
