--- a/pages/petMedicine.html
+++ b/pages/petMedicine.html
@@ -36,8 +36,8 @@
 
         <div id="profileMenu"
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
-          <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
-          <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="/User/forgetPassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
           <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
@@ -104,8 +104,8 @@
       <div>
         <h2 class="font-bold text-lg mb-2">Quick Links</h2>
         <ul class="space-y-1">
-          <li><a href="#" class="hover:text-[#6ab7e2]">Home</a></li>
-          <li><a href="#" class="hover:text-[#6ab7e2]">Pet Food</a></li>
+          <li><a href="home.html" class="hover:text-[#6ab7e2]">Home</a></li>
+          <li><a href="petfood.html" class="hover:text-[#6ab7e2]">Pet Food</a></li>
           <li><a href="#" class="hover:text-[#6ab7e2]">Pet Medicine</a></li>
         </ul>
       </div>
