--- a/pages/petfood.html
+++ b/pages/petfood.html
@@ -39,7 +39,7 @@
 
         <div id="profileMenu"
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
-          <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
           <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
           <a href="/pages/addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
@@ -86,7 +86,7 @@
     <div class="px-6 md:px-20 grid grid-cols-1 md:grid-cols-3 gap-6">
       <div>
         <h2 class="font-bold text-lg mb-2">PawPromise</h2>
-        <p>Email: petfood35@gmail.com</p>
+        <p>Email: info@pawpromise.com</p>
         <p>Contact: +8801761896783</p>
       </div>
       <div>
