--- a/pages/addCart.html
+++ b/pages/addCart.html
@@ -47,7 +47,7 @@
                     <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
                     <a href="/User/forgetPassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
                     <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
-                    <a href="#" class="px-4 py-2 hover:bg-gray-100">Logout</a>
+                    <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
                 </div>
             </div>
         </div>
@@ -140,7 +140,7 @@
             padding: 20px;
         }
 
-        h3.heading  {
+        h3.heading {
             font-size: 1.5rem !important;
             font-weight: 900;
             margin-bottom: 25px;
@@ -189,7 +189,7 @@
 
 
     <!-- Library Import -->
-     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Checkout Page -->
 
     <script>
@@ -286,7 +286,7 @@
     </script>
 
     <script src="/js/navbar.js"></script>
-    
+
 </body>
 
 </html>
