--- a/pages/contact.html
+++ b/pages/contact.html
@@ -168,5 +168,6 @@
       &copy; 2025 PawPromise. All Rights Reserved.
     </div>
   </footer>
+  <script src="/js/navbar.js"></script>
 </body>
 </html>
