--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,7 @@
 
         <div id="profileMenu"
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
-          <a href="#" class="px-4 py-2 hover:bg-gray-100">Profile</a>
+          <a href="/pages/profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
           <a href="/User/forgetPassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
           <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
