--- a/pages/home.html
+++ b/pages/home.html
@@ -39,7 +39,7 @@
         <div id="profileMenu"
           class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex flex-col z-50">
           <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
-          <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
+          <a href="/User/forgetPassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
           <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" id="logoutLink" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
@@ -142,10 +142,10 @@
 
       <!-- Peddy Info -->
       <div class="max-w-xs mx-auto text-center md:mx-0 md:text-left">
-        <h2 class="text-xl font-bold">Peddy</h2>
-        <p>123 Washington 165, NY CA 94003</p>
-        <p>Phone: +315 854 4725</p>
-        <p>Email: info@foundin.com</p>
+        <h2 class="text-xl font-bold">PawPromise</h2>
+        <p>Dhaka Bangladesh</p>
+        <p>Phone: +8801737712021</p>
+        <p>Email: info@PawPromise.com</p>
         <p>Opening hours: 8AM - 1PM</p>
         <div class="flex gap-3 mt-3">
           <i class="fab fa-facebook"></i>
