--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
 
         <div class="profile-menu hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md flex-col z-50 border border-gray-100">
           <a href="profile.html" class="px-4 py-2 hover:bg-gray-100">Profile</a>
-          <a href="updatePassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
+          <a href="/User/forgetPassword.html" class="px-4 py-2 hover:bg-gray-100">Update Information</a>
           <a href="addCart.html" class="px-4 py-2 hover:bg-gray-100">Cart</a>
           <a href="#" class="px-4 py-2 hover:bg-gray-100">Logout</a>
         </div>
